# ReminderDesk

./: .gitignore  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PROGRESS.md  README.md  ReminderDesk.csproj  build-sign.bat  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
Converters/: Converters.cs
Models/: ReminderItem.cs  ScheduleConfig.cs  ScheduleHelper.cs
ReminderDesk/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
ReminderDesk/Converters/: PriorityColorConverter.cs
ReminderDesk/Styles/: GlassStyles.xaml
Services/: DatabaseService.cs  ReminderCheckService.cs  SchedulerService.cs  SkinService.cs
Themes/: SkinBlue.xaml  SkinCyan.xaml  SkinDark.xaml  SkinFresh.xaml  SkinGold.xaml  SkinModern.xaml  SkinOrange.xaml  SkinPink.xaml  SkinRose.xaml
ViewModel/: MainViewModel.cs
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  installer.nsh  reminder.html  signing.cer  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  recurring.rs  reminder.rs  scheduler.rs  settings.rs  tray.rs
